# wavegen

./: README.md  pyproject.toml  wavegen.py
.github/workflows/: python-package.yml
src/wavegen/: Makefile  wavegen.py
tests/: test_wavegen.py
