[project]
name = "wavegen"
version = "0.0.1"
authors = [
  { name="Pat Carr", email="pato@patocarr.com" },
]
description = "Continuous Waveform Generator"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU version 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/patocarr/wavegen"
Issues = "https://github.com/patocarr/wavegen/issues"
